--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^13.5.0",
-    "openai": "^4.95.1",
+    "dotenv": "^16.5.0",
+    "openai": "^3.3.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-scripts": "5.0.1",
